--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -122,6 +122,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             mapbox:layout_constraintHorizontal_bias="1.0"
             mapbox:layout_constraintStart_toStartOf="parent"
             mapbox:layout_constraintTop_toTopOf="parent"
@@ -135,6 +136,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             mapbox:layout_constraintHorizontal_bias="1.0"
             mapbox:layout_constraintStart_toStartOf="parent"
             mapbox:layout_constraintTop_toTopOf="parent"
@@ -148,6 +150,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             mapbox:layout_constraintHorizontal_bias="1.0"
             mapbox:layout_constraintStart_toStartOf="parent"
             mapbox:layout_constraintTop_toTopOf="parent"
@@ -161,6 +164,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             mapbox:layout_constraintHorizontal_bias="1.0"
             mapbox:layout_constraintStart_toStartOf="parent"
             mapbox:layout_constraintTop_toTopOf="parent"
@@ -174,6 +178,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             mapbox:layout_constraintHorizontal_bias="1.0"
             mapbox:layout_constraintStart_toStartOf="parent"
             mapbox:layout_constraintTop_toTopOf="parent"
@@ -187,6 +192,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             mapbox:layout_constraintHorizontal_bias="1.0"
             mapbox:layout_constraintStart_toStartOf="parent"
             mapbox:layout_constraintTop_toTopOf="parent"
@@ -200,6 +206,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             mapbox:layout_constraintHorizontal_bias="1.0"
             mapbox:layout_constraintStart_toStartOf="parent"
             mapbox:layout_constraintTop_toTopOf="parent"
