--- a/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
+++ b/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnNextGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,7 +46,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.967"
-        app:srcCompat="@android:drawable/ic_menu_send" />
+        app:srcCompat="@drawable/imgnext"
+        app:backgroundTint="@color/colorPrimary"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
