--- a/app/src/main/res/layout/activity_ajustes.xml
+++ b/app/src/main/res/layout/activity_ajustes.xml
@@ -50,5 +50,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnIbilbidea" />
 
+        <Button
+            android:id="@+id/btnReset"
+            android:layout_width="260dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/rippleeffect"
+            android:text="@string/Reset"
+            android:textAlignment="center"
+            android:textColor="@color/colorTexto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnBertsioa_egiaztatu" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
