--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3498db</color>
     <color name="colorPrimaryDark">#2471a3</color>
     <color name="colorAccent">#d81b60</color>
-    <color name="blue">#0000ff</color>
+    <color name="blue">#7c7c7c</color>
     <color name="white">#f6f6f6f6</color>
     <color name="colorTexto">#d4e6f1</color>
 </resources>
