--- a/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
+++ b/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Desberdintasunabilatu_4">
+    tools:context=".Desberdintasunakbilatu_4">
 
     <TextView
         android:id="@+id/textView"
