--- a/app/src/main/res/layout/activity_komikia_8.xml
+++ b/app/src/main/res/layout/activity_komikia_8.xml
@@ -11,4 +11,11 @@
         android:layout_height="match_parent"
         android:src="@drawable/komikia_1"/>
 
+    <LinearLayout
+        android:layout_width="139dp"
+        android:layout_height="516dp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="245dp"
+        tools:layout_editor_absoluteY="0dp"></LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
