--- a/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
+++ b/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
@@ -89,20 +89,20 @@
         app:backgroundTint="@color/colorPrimary"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btnNext"
+        android:id="@+id/btnNextGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.984"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.967"
-        app:srcCompat="@drawable/imgnext"
-        app:backgroundTint="@color/colorPrimary"/>
+        app:srcCompat="@drawable/imgnext" />
 
 </android.support.constraint.ConstraintLayout>
