--- a/app/src/main/res/layout/activity_komikia_8.xml
+++ b/app/src/main/res/layout/activity_komikia_8.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".komikia_8">
 
-    <ImageView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/slideViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/komikia_1"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"></android.support.v4.view.ViewPager>
 
     <LinearLayout
-        android:layout_width="139dp"
-        android:layout_height="516dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="245dp"
-        tools:layout_editor_absoluteY="0dp"></LinearLayout>
+        android:id="@+id/dotsLayout"
+        android:layout_width="64dp"
+        android:layout_height="55dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"></LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
