Descarga de fuentes, marcadores de colores, cambio de color en la UI, onclick de marcador(temp)

--- a/app/src/main/res/layout/activity_ajustes.xml
+++ b/app/src/main/res/layout/activity_ajustes.xml
@@ -26,9 +26,11 @@
             android:layout_marginTop="180dp"
             android:layout_marginEnd="50dp"
             android:background="@drawable/rippleeffect"
+            android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/Sortzaileak"
             android:textAlignment="center"
             android:textColor="@color/colorTexto"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
