--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/rippleeffect"
+        android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/btnHasi"
         android:textColor="@color/colorTexto"
         app:layout_constraintBottom_toBottomOf="parent"
