--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3498db</color>
-    <color name="colorPrimaryDark">#2471a3</color>
+    <color name="colorPrimary">#ffac9e</color>
+    <color name="colorPrimaryDark">#ff9ec0</color>
     <color name="colorAccent">#d81b60</color>
     <color name="blue">#7c7c7c</color>
     <color name="white">#f6f6f6f6</color>
