--- a/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
+++ b/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/idLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Desberdintasunakbilatu_4">
@@ -14,16 +15,47 @@
         android:layout_marginStart="96dp"
         android:layout_marginTop="31dp"
         android:layout_marginEnd="95dp"
-        android:layout_marginBottom="31dp"
+        android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:text="@string/azalpena"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img1"
+            android:scaleType="centerCrop" />
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img2"
+            android:scaleType="centerCrop" />
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img3"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
+
+    <!--<ImageView
         android:id="@+id/argazkia1"
         android:layout_width="160dp"
         android:layout_height="102dp"
@@ -72,7 +104,7 @@
         app:layout_constraintEnd_toStartOf="@+id/argazkia1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0" />-->
 
     <!--<ImageButton
         android:id="@+id/hurrengoa"
