--- a/app/src/main/res/layout/activity_komikia_8.xml
+++ b/app/src/main/res/layout/activity_komikia_8.xml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".komikia_8">
+    tools:context=".MainActivity">
+
+
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/slideViewPager"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
-    <LinearLayout
-        android:id="@+id/dotsLayout"
-        android:layout_width="64dp"
-        android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"></LinearLayout>
-
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
