--- a/app/src/main/res/layout/komikia_layout.xml
+++ b/app/src/main/res/layout/komikia_layout.xml
@@ -20,11 +20,16 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="101dp"
+        android:layout_height="38dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="288dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginStart="271dp"
+        android:layout_marginBottom="15dp"
         android:text="Amaitu" />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/GifImageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
