Ejercicio 9 (Debate) completado, imagen y valores de strings metidos.

--- a/app/src/main/res/layout/activity_argazkiaaztertu_3.xml
+++ b/app/src/main/res/layout/activity_argazkiaaztertu_3.xml
@@ -28,15 +28,15 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="7dp"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.015"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.968"
-        app:srcCompat="@drawable/imgprev"
-        app:backgroundTint="@color/colorPrimary"/>
+        app:srcCompat="@drawable/imgprev" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnNext"
