--- a/app/src/main/res/layout/activity_komikia_8.xml
+++ b/app/src/main/res/layout/activity_komikia_8.xml
@@ -37,13 +37,13 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.984"
+        app:layout_constraintHorizontal_bias="0.975"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.967"
-        app:srcCompat="@drawable/imgnext"
-        app:backgroundTint="@color/colorPrimary"/>
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/imgnext" />
 
 </android.support.constraint.ConstraintLayout>
