--- a/app/src/main/res/layout/komikia_layout.xml
+++ b/app/src/main/res/layout/komikia_layout.xml
@@ -23,13 +23,19 @@
         android:layout_width="101dp"
         android:layout_height="38dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="271dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="453dp"
+        android:layout_marginEnd="137dp"
+        android:layout_marginBottom="20dp"
         android:text="Amaitu" />
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/GifImageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
