Retocar diseño listado

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#ffac9e</color>
     <color name="colorPrimaryDark">#ff9ec0</color>
     <color name="colorAccent">#d81b60</color>
-    <color name="blue">#7c7c7c</color>
+    <color name="blue">#19ffffff</color>
     <color name="white">#f6f6f6f6</color>
     <color name="colorTexto">#d4e6f1</color>
 </resources>
