--- a/app/src/main/res/layout/grid_item_card_list.xml
+++ b/app/src/main/res/layout/grid_item_card_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -19,10 +20,14 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="150dp"
-            android:visibility="visible"
-            android:background="#80000000" >
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:background="#80000000"
+            android:visibility="visible">
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -30,21 +35,24 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp">-->
 
-                <TextView
-                    android:id="@+id/nombre_parada"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:scrollHorizontally="true"
-                    android:shadowColor="#000"
-                    android:shadowRadius="7.0"
-                    android:text="PRUEBA TEXTO"
-                    android:textColor="#ffffff"
-                    android:textSize="14sp" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/nombre_parada"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@color/blue"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:scrollHorizontally="true"
+                android:shadowColor="#000"
+                android:shadowRadius="7.0"
+                android:text="PRUEBA TEXTO"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="18sp" />
+            <!--</LinearLayout>-->
         </RelativeLayout>
 
     </RelativeLayout>
