--- a/app/src/main/res/layout/activity_debaterakogalderak_9.xml
+++ b/app/src/main/res/layout/activity_debaterakogalderak_9.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/galdera1"
-        android:layout_width="286dp"
-        android:layout_height="75dp"
+        android:layout_width="332dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -30,14 +30,14 @@
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="12dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/debaterakog2"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/galdera3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.964"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -46,14 +46,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="12dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/debaterakog3"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/galdera4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.771"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -62,14 +62,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="348dp"
+        android:layout_marginBottom="308dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/debaterakog4"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
+        app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -86,8 +86,10 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/fotodebate"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/galdera4" />
+        app:layout_constraintTop_toBottomOf="@+id/galdera4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/fotodebate"
@@ -98,7 +100,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:scaleType="fitXY"
-        android:src="@drawable/debate"
+        android:src="@drawable/debate2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
