--- a/app/src/main/res/layout/komikia_layout.xml
+++ b/app/src/main/res/layout/komikia_layout.xml
@@ -20,16 +20,17 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="101dp"
-        android:layout_height="38dp"
+        android:layout_width="136dp"
+        android:layout_height="36dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="453dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="465dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/rippleeffect"
         android:text="Amaitu" />
 
     <pl.droidsonroids.gif.GifImageView
@@ -37,5 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp" />
 </RelativeLayout>
